# production-barcode-system

./: .gitignore  CMakeLists.txt  ClientServerEmulator.sln  ConsoleApp2.sln  README.md  client.cpp  client.h  config.sh  main.cpp  scaner.cpp  scaner.h  server.cpp  server.h  user.h
Application/: Program.cs
HTTPListener/: HTTPListener.cs  HTTPListener.csproj
InitializeDB/: CMakeLists.txt  README.md  main.cpp
Models/: Database.cs  Requests.cs
MySQL/: MySQL.cpp  MySQL.h
Product/: Product.cpp  Product.h  ProductMapper.cpp  ScanerProductMapper.cpp  ScanerProductMapper.h  UserProductMapper.cpp  UserProductMapper.h
RequestExample/: addDevice.txt  addModel.txt  allDevice.txt  allModel.txt  allModelsDetailed.txt  deleteDevice.txt  deleteModel.txt  deviceByModel.txt  dropModel.txt  get.txt  getDevice.txt  getDeviceIDByModel.txt  signIn.txt  testRequest.txt
Server/: server.cpp  server.h
Server/Client/: client.cpp  client.h
Server/Client/Router/: router.cpp  router.h
Server/Client/Scaner/: scaner.cpp  scaner.h
Server/Client/User/: user.cpp  user.h
Server/Client/User/Router/: router.cpp  router.h
Server/DataBase/src/: err_code.h
Server/DataBase/src/MySQL/: MySQL.cpp
Server/DataBase/src/Parser/: IGet.cpp  IGet.h  IPost.cpp  IPost.h
Server/DataBase/src/Product/: Product.cpp  Product.h  ProductMapper.cpp  ProductMapper.h
Server/DataBase/src/Scaner/: DeviceScaner.cpp  DeviceScaner.h  ScanerMapper.cpp  ScanerMapper.h
Server/DataBase/src/User/: User.cpp  User.h  UserMapper.cpp  UserMapper.h
Server/HttpHandler/: httphandler.cpp  httphandler.h
TCPListener/: TCPListener.cs
TestGui/: CMakeLists.txt  tst_gui_test.cpp
Tests/: CMakeLists.txt  main.cpp  test.cpp  tst_mytest.h
Texnopark_cpp_project/: CMakeLists.txt  addproductform.cpp  addproductform.h  addproducttypesform.cpp  addproducttypesform.h  allproductstab.cpp  allproductstab.h  authorizationform.cpp  authorizationform.h  controllerforbarecode.cpp  controllerforbarecode.h  controllerfordatabase.cpp  controllerfordatabase.h  main.cpp  mainwindow.cpp  mainwindow.h  productsbytypestab.cpp  productsbytypestab.h  producttab.cpp  producttab.h  producttypestab.cpp  producttypestab.h  structuresForTable.h
User/: User.cpp  User.h  UserMapper.cpp
prisonDataMatrixGenerator/: CMakeLists.txt
scanner/: AppWorker.cpp  AppWorker.h  CMakeLists.txt  GUIForm.h  GUIItem.h  HTTPClient.h  HotSpot.h  KeyboardControl.h  KeyboardView.h  SelectorControl.h  TCPSocket.h  WifiController.cpp  WifiController.h  user_main.cpp
scanner/SDK/: CPP3690.ld  SysCallLib.c  SysCallLib.h  UserApp3590 - ё±±ѕ.ld  UserApp3590.ld  UserApp3690.ld  UserApp3690plus.ld  userstm32.ld  userstm32_Previous1.ld  userstm32plus.ld
scanner/SDK/MS3590Lib/: SysCallLib.c  SysCallLib.h  ms3590_lib.h
scanner/SDK/MS3690Lib/: SysCallLib.c  SysCallLib.h
scanner/SDK/lib/: syscalls.c
scanner/SDK/lib/src/: ms3590_vector.c  stm32f10x_vector.c
src/: err_code.h
src/MySQL/: MySQL.cpp  MySQL.h
src/Parser/: IGet.h
src/Product/: Product.cpp  ProductMapper.cpp  ProductMapper.h
src/Scaner/: Scaner.cpp  Scaner.h  ScanerMapper.cpp  ScanerMapper.h
src/User/: UserMapper.h
test/: test_Product_class.cpp  test_Scaner_class.cpp  test_User_class.cpp
