PROJECT(BarcodeScanner)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

SET(CMAKE_AR "${TOOLCHAIN_BIN_DIR}/${TARGET_TRIPLET}-ar${TOOL_EXECUTABLE_SUFFIX}")
SET(CMAKE_RANLIB "${TOOLCHAIN_BIN_DIR}/${TARGET_TRIPLET}-ranlib${TOOL_EXECUTABLE_SUFFIX}")


INCLUDE_DIRECTORIES(
    SDK/MS3690Lib 
)

SET(PROJECT_SOURCES
    user_main.cpp
)

set(LIBSTM32_OUT  ../SDK/lib/libstm32.a)
  
set(LIBSTM32_OBJS1 ../SDK/lib/src/stm32f10x_vector.o)
set(LIBSTM32_SRCS1 ../SDK/lib/src/stm32f10x_vector.c)
set(LIBSTM32_OBJS2 ../SDK/MS3690Lib/SysCallLib.o)
set(LIBSTM32_SRCS2 ../SDK/MS3690Lib/SysCallLib.c)

add_custom_target(stm32
COMMAND ${CMAKE_C_COMPILER} -mcpu=cortex-m3 -mthumb -Wall -ffunction-sections -static -O3 -c ${LIBSTM32_SRCS1} -o ${LIBSTM32_OBJS1}
COMMAND ${CMAKE_C_COMPILER} -mcpu=cortex-m3 -mthumb -Wall -ffunction-sections -static -O3 -c ${LIBSTM32_SRCS2} -o ${LIBSTM32_OBJS2}
COMMAND ${CMAKE_AR} -cr ${LIBSTM32_OUT} ${LIBSTM32_OBJS1} ${LIBSTM32_OBJS2}
)


add_library(syscalls STATIC SDK/lib/syscalls.c)

SET(STM32_LINKER_SCRIPT SDK/UserApp3690.ld)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES})
target_link_libraries(${CMAKE_PROJECT_NAME} syscalls ${PROJECT_SOURCE_DIR}/SDK/lib/libstm32.a)
add_dependencies(${CMAKE_PROJECT_NAME} stm32)
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS} -u GCC_Reset_Handler  -specs=nosys.specs -specs=nano.specs -T ${PROJECT_SOURCE_DIR}/SDK/CPP3690.ld")
#STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME})
